# nexus-vision-engine

./: .gitignore  CONTRIBUTING.md  README.md  pip install -e .  pyproject.toml  python -m nexus.pipeline
.github/workflows/: ci.yml
nexus/: __init__.py
path/to/: filename.js
python nexus/: pipeline.py
scripts/: README.md  ultra_fast_face_system.py
tests/: test_import.py  test_pipeline_import.py  test_smoke.py  test_version.py
